--- a/src/styles/homeComponent.scss
+++ b/src/styles/homeComponent.scss
@@ -13,18 +13,40 @@
   justify-content: center;
 }
 
+.usernameContainer {
+  width: 100%;
+  display: flex;
+}
+
 .usernameInner {
   display: flex;
-  background-color: rgba(256, 256, 256, 0.8);
+
   padding: 5rem;
   border-radius: 8px;
+  flex-direction: column;
 }
 
 .usernameInner input,
 .usernameInner button {
   font-size: 1.25rem;
+  padding: 1rem;
+  text-align: center;
 }
 
-.usernameInner button {
-  margin-left: 1rem;
+@keyframes fadeInUp {
+  from {
+    opacity: 0;
+    -webkit-transform: translate3d(0, 100%, 0);
+    transform: translate3d(0, 100%, 0);
+  }
+
+  to {
+    opacity: 1;
+    -webkit-transform: none;
+    transform: none;
+  }
+}
+
+.fade-in {
+  animation: fadeInUp 2s ease-in-out 0s forwards;
 }
