--- a/src/styles/messagesComponent.scss
+++ b/src/styles/messagesComponent.scss
@@ -1,9 +1,15 @@
-.wrapper {
+.messages_wrapper {
   min-height: 100vh;
   height: 100vh;
-  width: calc(100% - 200px);
+  width: 100%;
+  // width: calc(100% - 200px);
   display: flex;
   flex-direction: column;
+}
+
+.pfp_image {
+  margin-top: 2rem;
+  width: 80px;
 }
 
 .messageList {
@@ -28,11 +34,13 @@
   flex: 1;
   padding: 1rem;
   font-size: 1.25rem;
+  font-family: "Inter";
 }
 .messageBox button {
   margin-left: 0.5rem;
-  background-color: blueviolet;
+  background-color: #6667ab;
   font-size: 1.25rem;
+  font-family: "Inter";
 }
 
 .message {
@@ -46,7 +54,7 @@
   background-image: linear-gradient(
     rgb(255, 143, 178) 0%,
     rgb(167, 151, 255) 50%,
-    rgb(0, 229, 255) 100%
+    rgb(0, 189, 255) 100%
   );
   background-attachment: fixed;
   border-radius: 0.5em 0.5em 0 0.5em;
@@ -62,6 +70,7 @@
 .messageSender {
   color: #333;
   font-size: 0.75rem;
+  margin-left: 0.5rem;
 }
 
 .messageBody {
